--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ PUB_URL=
 signing.keyId=
 signing.password=
 signing.secretKeyRingFile=
-gradle.publish.key=7bl4nsEIvVlyJH5OQbe06DSo28eXV1u
-gradle.publish.secret=zfoViMdEyfcTW3mjwReRNenX16cAEZRk
+gradle.publish.key=
+gradle.publish.secret=
 org.gradle.jvmargs=-Xmx1024m
 org.gradle.daemon=false
