--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,10 +26,14 @@ jobs:
           java-version: 1.8
       - name: PGP Prepare
         run: |
-          sed -i -e "s,gradle.publish.key=,gradle.publish.key=$PUB_KEY,g" gradle.properties
-          sed -i -e "s,gradle.publish.secret=,gradle.publish.secret=$PUB_SECRECT,g" gradle.properties
+          echo "Create .gpg key"
+          echo "$GPG_KEY" > ./release.asc
+          gpg --quiet --output $GITHUB_WORKSPACE/release.gpg --dearmor ./release.asc
+          sed -i -e "s,signing.keyId=,signing.keyId=$GPG_KEY_ID,g" gradle.properties
+          sed -i -e "s,signing.password=,signing.password=$GPG_PWD,g" gradle.properties
+          sed -i -e "s,signing.secretKeyRingFile=,signing.secretKeyRingFile=$GITHUB_WORKSPACE/release.gpg,g" gradle.properties
           cat gradle.properties
       - name: Build with Gradle
         run: gradle build
       - name: Publish to Gradle Plugin Portal
-        run: gradle publishPlugins
+        run: gradle publishPlugins -Pgradle.publish.key=$PUB_KEY -Pgradle.publish.secret=$PUB_SECRECT
