--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,15 @@
-PUB_USER=
-PUB_PWD=
-PUB_URL=
+maven.user=
+maven.key=
+
+gpr.user=
+gpr.key=
+
 signing.keyId=
 signing.password=
 signing.secretKeyRingFile=
+
 gradle.publish.key=
 gradle.publish.secret=
+
 org.gradle.jvmargs=-Xmx1024m
 org.gradle.daemon=false
