--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Build with Gradle
         run: gradle build
       - name: Publish to Gradle Plugin Portal
-        run: gradle publishPlugins -Pgradle.publish.key=$GRADLE_KEY -Pgradle.publish.secret=GRADLE_SECRET
+        run: gradle publishPlugins -Pgradle.publish.key=$GRADLE_KEY -Pgradle.publish.secret=$GRADLE_SECRET
